fixtures/semantic/valid/01-valid-component.fl
component Button(
  variant tone: [primary, ghost] = primary
  prop label-text: text = "Button"
) {
  surface {
    fill: token(color.action.primary)
    opacity: 0.8

    state hover {
      opacity: 1
    }

    variant tone {
      ghost {
        outline: transparent
      }
    }

    text as heading {
      content: @label-text
      level: 2
      text-color: token(color.text.primary)
      size: token(font.size.md)
    }
  }

  intent trigger: "button-action" {
    label: "@label-text"
  }

  accessible {
    label: "Action for @label-text"
  }
}
