fixtures/semantic/invalid/14-vr-st7-vr-v5-applicability.fl
component InvalidStateAndVariant(
  variant tone: [primary, ghost] = primary
) {
  surface {
    state hover {
      text-color: token(color.text.primary)
    }

    variant tone {
      ghost {
        text-color: token(color.text.primary)
      }
    }
  }
}
